{
    "name": "InputPlayer",
    "maps": [
        {
            "name": "Mover",
            "id": "bd6fc01f-34b5-4420-80b3-0b81eda8c0c1",
            "actions": [
                {
                    "name": "MoveWalk",
                    "type": "Value",
                    "id": "ca9ec897-5cb9-4f7f-b3b7-e72a1dd7b8d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f50919af-1748-40ae-b8b1-c6f0d9d45833",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "d2195cd1-ba86-4a91-b340-b4be68ed392a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "MoveWASD",
                    "id": "8d927249-45e6-47d1-b86b-a11907931a98",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveWalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "ec0b38be-5547-4c4c-9451-b2c07aa247fe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "3c647c91-b43a-45c0-9f4b-aeddb349d97a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "21d3cd5d-731f-4e26-9c0c-a5c7d8f1602b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "46261a71-6d19-48a8-b77c-28df254825d2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MoveWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "921926b7-b730-4cea-95c0-1efc433e4198",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f1c1fa60-05ba-486f-8197-96bc5f55a0d2",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "720a7a61-c861-436e-944a-aba73d02a053",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fbd21d11-4bb0-40f8-86b6-0f9bd4cf335b",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ba5cb391-fb16-4706-a09d-ffc1bb35c052",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "599863cc-81ce-420c-89ed-b6c5f635144a",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard and Mouse",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard and Mouse",
            "bindingGroup": "KeyBoard and Mouse",
            "devices": []
        }
    ]
}